# SushiCLI

./: README.md  pyproject.toml
sushicli/: __init__.py  config.py  config_base.py  console.py  icons.py  renderer.py  theme.py  typer_theme.py  workspace.py
