[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sushicli"
version = "0.1.0"
description = "Shared, config-driven CLI presentation layer for the Sushi* developer CLIs (sr / se / ss)"
authors = [{ name = "Mustafa Garip", email = "mustafagarip@sushisystems.io" }]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sushicli*"]

[tool.setuptools.package-data]
sushicli = ["py.typed"]
